// Copyright 2017 Wanglu.
//
// Author: zhu.zhengming@wanglutech.com.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "wangluinc.hsmSupport.syncFile";
option java_outer_classname = "SyncFileProto";

package syncFile;

// The HsmSync service definition.
service HsmSync {
  // Sends a sync file.
  rpc SyncFile (SyncFileRequest) returns (SyncFileReply) {}
}

// The request message containing the user's name.
message SyncFileRequest {
  string nodeAddr = 1;
  string nodePIN = 2;
  bytes fileData = 3;
}

// The response message containing the greetings
message SyncFileReply {
  int32 resCode = 1;
}
